--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,8 +1,24 @@
 @font-face
-	font-family: 'raleway-example'
-	src: url('../fonts/RalewayRegular.woff') format('woff')
+	font-family: 'roboto-custom'
+	src: url('../fonts/Roboto-Regular.woff') format('woff')
 
 @font-face
-	font-family: 'raleway-example'
-	src: url('../fonts/RalewayBold.woff') format('woff')
-	font-weight: bold
+	font-family: 'roboto-custom'
+	src: url('../fonts/Roboto-Bold.woff') format('woff')
+	font-weight: 700
+
+@font-face
+	font-family: 'roboto-custom'
+	src: url('../fonts/Roboto-Light.woff') format('woff')
+	font-weight: 300
+
+@font-face
+	font-family: 'roboto-custom'
+	src: url('../fonts/Roboto-Thin.woff') format('woff')
+	font-weight: 100
+
+@font-face
+	font-family: 'roboto-custom'
+	src: url('../fonts/Roboto-Black.woff') format('woff')
+	font-weight: 900
+
