--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -3,6 +3,19 @@
 @import "base"
 @import "vars"
 
-// Пользовательские стили
+.card_image 
+  width: 100%
+  min-height: 200px
+  height: auto
 
-@import "media" // Всегда в конце
+.image-wrapper
+	float: left !important
+	display: inline-block !important
+	max-width: 300px
+	width: auto
+	height: auto
+
+.wall-text
+	width: auto
+
+@import "media" // Always in the end
