--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -6,16 +6,6 @@
 .card_image 
   width: 100%
   min-height: 200px
-  height: auto
-
-.image-wrapper
-	float: left !important
-	display: inline-block !important
-	max-width: 300px
-	width: auto
-	height: auto
-
-.wall-text
-	width: auto
+  height: 100%
 
 @import "media" // Always in the end
