start post page

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -15,6 +15,10 @@ body
 	overflow-x: hidden
 	opacity: 1
 
+h1, h2, h3, h4, h5, h6
+	font-size: 900
+	font-family: roboto-custom, sans-serif
+
 .img-responsive
 	display: block
 	max-width: 100%
