--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,5 +7,27 @@
   width: 100%
   height: auto
 
+.article__content
+	margin: 0 auto
+	width: 80%
+
+ p 
+ 	text-indent: 20px
+   
+
+.article_header h1
+	margin: 20px 10px
+	text-align: center
+	font-size: 45px
+	font-weight: 900
+  line-height: 1.2
+
+.article_text
+	margin: 30px 0
+	text-align: left 
+
+.article_image
+	width: 100%
+	height: auto
 
 @import "media" // Always in the end
