--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -15,6 +15,9 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
+	.article_header h1
+		font-size: 30px
+
 
 
 /* Extra Small Devices, Phones */
