--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -3,6 +3,11 @@
 @import "base"
 @import "vars"
 
+.active
+	background-color: #555
+	font-size: 18px
+	color: #fff !important
+
 .card_image 
   width: 100%
   height: auto
