add some changes

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -3,6 +3,9 @@
 @import "base"
 @import "vars"
 
+ul, li 
+	list-style: none
+
 .active
 	background-color: #555
 	font-size: 18px
@@ -18,7 +21,9 @@
 
  p 
  	text-indent: 20px
-   
+
+.hidden
+  visibility: hidden
 
 .article_header h1
 	margin: 20px 10px
