--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,2 +1,3 @@
 @import "../libs/normalize-css/normalize.css"
 @import "../libs/mdl/material.min.css"
+@import "../libs/jquery/jquery.modal.min.css"
