--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -7,9 +7,8 @@ ul, li
 	list-style: none
 
 .active
-	background-color: #555
 	font-size: 18px
-	color: #fff !important
+	color: red !important
 
 .card_image 
   width: 100%
@@ -18,6 +17,16 @@ ul, li
 .article__content
 	margin: 0 auto
 	width: 80%
+
+#back
+	transition: 0.5s ease
+	i
+		padding-top: 10px
+		font-size: 40px
+		color: white
+#back:hover
+	i
+		color: black
 
  p 
  	text-indent: 20px
