add login and sign up dialog

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -14,6 +14,25 @@ ul, li
   width: 100%
   height: auto
 
+.mdl-dialog
+	width: 500px
+	.mdl-textfield
+		width: 100%
+	.mdl-dialog__actions 
+		padding-top: 30px
+		button
+			margin-top: 5px
+		div
+			width: 100%
+			text-align: center
+			p
+				margin-top: 10px
+				float: left
+			button
+				padding-right: 20px
+				float: left
+
+
 .article__content
 	margin: 0 auto
 	width: 80%
