--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -11,24 +11,23 @@
 @media only screen and (max-width : 992px)
 	/**/
 
-
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	/**/
-	.article_header h1
-		font-size: 30px
-
-
+	.mdl-dialog
+		width: 440px
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
 	/**/
-
+	.mdl-dialog
+		width: 320px
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
-
+	.mdl-dialog
+		width: 300px
 
 /*==========  Mobile First  ==========*/
 
