--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -6,10 +6,11 @@
 @media only screen and (max-width : 1200px)
 	/**/
 
-
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	.mdl-cell
+		width: 98%	
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
