--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -6,9 +6,9 @@
 ul, li
 	list-style: none
 
-.active
-	font-size: 18px
-	color: red !important
+.active	
+	font-size: 16px
+	text-decoration: underline
 
 .card_image
 	width: 100%
